# game_of_life

./: CREDITS.md  Cargo.toml  LICENSE  README.md  index.html
assets/rect/: fffs_bottom_bottom_wall_llaw_eees.mtl
src/: generic_ui.rs  hashmap_ext.rs  main.rs  menu_ui.rs  simulation.rs  tiling.rs
src/menus/: events.rs  mod.rs  rules_container.rs  state.rs  tile_inspect.rs
src/ui/: anchor.rs  button.rs  element.rs  input.rs  mod.rs  number_field.rs  scroll_view.rs  text_field.rs
src/visuals/: collapse.rs  geom.rs  mod.rs
src/visuals/geom/: build_profiles.rs  geom.rs  handles.rs  mod.rs  orientations.rs  socket.rs  vertical.rs  walls.rs
src/visuals/render/: instanced_depth.wgsl  instanced_mesh.rs  instanced_mesh.wgsl  instanced_mesh_material.rs  instanced_pbr.rs  instanced_shadows.rs  mod.rs
