[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
churrschedule = { git="ssh://git@github.com/TheChurro/churrschedule.git" }
churrui = { git="ssh://git@github.com/TheChurro/churrui.git" }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!