[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_obj = "0.7.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"